--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Howard - Feliz Cumpleaños</title>
+    <title>Hogwarts - Academy of Magic and Science</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,7 +18,7 @@
     <div id="background-selector">
         <label for="bg-select">Cambiar fondo:</label>
         <select id="bg-select">
-            <option value="1">Fondo Clásico Howard</option>
+            <option value="1">Fondo Clásico Hogwarts</option>
             <option value="2">Biblioteca Vintage</option>
             <option value="3">Aurora Mágica</option>
             <option value="4">Estrellas Nocturnas</option>
@@ -29,10 +28,10 @@
 
     <header class="main-header">
         <div class="logo-container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Hogwarts-Crest.png" alt="Escudo Howard"
-                class="logo">
-            <h1>HOWARTS</h1>
-            <h2>Institute of Magic and Science</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Hogwarts-Crest.png"
+                alt="Escudo Hogwarts" class="logo">
+            <h1>HOGWARTS</h1>
+            <h2>Academy of Magic and Science</h2>
         </div>
     </header>
 
@@ -67,19 +66,27 @@
 
             <div class="countdown-message">
                 <p>Faltan <span id="countdown-text"></span> para la gran sorpresa</p>
-                <p class="special-message">¡Felicidades Ximena Garcia Mendienta, haz sido seleccionada!</p>
+                <p class="special-message">¡Felicidades Ximena Garcia Mendienta, has sido seleccionada!</p>
 
                 <div class="acceptance-message">
                     <p>¡Felicidades, Ximena García Mendieta!</p>
-                    <p>Nos complace informarte que has sido oficialmente seleccionada para formar parte del Hogwarts –
-                        Institute of Magic and Science</p>
-                    <p>Tras una cuidadosa observación de tu esencia, tu carácter y tu extraordinaria capacidad para ver
-                        el mundo con sensibilidad y valentía, el Consejo de Magia ha determinado que posees las
-                        cualidades necesarias para emprender este camino.</p>
-                    <p>A partir de ahora, las puertas de nuestro instituto se abren para ti, donde el conocimiento y la
-                        magia caminan juntos, y donde cada estudiante escribe su propia historia.</p>
-                    <p>Tu carta ha llegado tal como estaba destinada a hacerlo. La magia siempre encuentra a quienes
-                        creen en ella.</p>
+                    <p>
+                        Nos complace informarte que has sido oficialmente seleccionada para formar parte de
+                        Hogwarts Academy – Academy of Magic and Science.
+                    </p>
+                    <p>
+                        Tras una cuidadosa observación de tu esencia, tu carácter y tu extraordinaria capacidad
+                        para ver el mundo con sensibilidad y valentía, el Consejo de Magia ha determinado que
+                        posees las cualidades necesarias para emprender este camino.
+                    </p>
+                    <p>
+                        A partir de ahora, las puertas de nuestra Academy se abren para ti, donde el conocimiento
+                        y la magia caminan juntos, y donde cada estudiante escribe su propia historia.
+                    </p>
+                    <p>
+                        Tu carta ha llegado tal como estaba destinada a hacerlo. La magia siempre encuentra a
+                        quienes creen en ella.
+                    </p>
                     <p>Te esperamos con honor y orgullo.</p>
                 </div>
             </div>
@@ -102,7 +109,7 @@
                         <p class="letter-status" id="status1">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown1"></div>
                         <p class="letter-description">
-                            Inicio del programa especial del Howarts Institute.
+                            Inicio del programa especial de Hogwarts Academy.
                         </p>
                     </div>
                 </div>
@@ -130,12 +137,12 @@
                         <p class="letter-status" id="status3">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown3"></div>
                         <p class="letter-description">
-                            Notificación estacional del Howarts Institute.
+                            Notificación estacional de Hogwarts Academy.
                         </p>
                     </div>
                 </div>
 
-                <!-- CARTA 4 (INGRESO OFICIAL) -->
+                <!-- CARTA 4 -->
                 <div class="letter-card" id="letter4">
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
@@ -144,12 +151,11 @@
                         <p class="letter-status" id="status4">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown4"></div>
                         <p class="letter-description">
-                            Carta oficial de ingreso al Howarts Institute.
+                            Carta oficial de ingreso a Hogwarts Academy.
                         </p>
                     </div>
                 </div>
 
-                <!-- CARTA 5 (CUMPLEAÑOS) -->
                 <div class="letter-card birthday" id="letter5">
                     <div class="letter-seal sealed"><i class="fas fa-gift"></i></div>
                     <div class="letter-content">
@@ -158,7 +164,7 @@
                         <p class="letter-status" id="status5">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown5"></div>
                         <p class="letter-description">
-                            Celebración de cumpleaños y decreto especial del Instituto.
+                            Celebración de cumpleaños y decreto especial de la Academy.
                         </p>
                     </div>
                 </div>
@@ -166,18 +172,18 @@
             </div>
         </section>
 
-
         <section class="instructions">
             <h3>Instrucciones</h3>
-            <p>Cada carta representa un regalo que recibirás en la fecha indicada. Cuando llegue la fecha, la carta se
-                desbloqueará y podrás descubrir qué regalo especial te espera. El contador principal muestra el tiempo
-                restante para tu gran día de cumpleaños.</p>
+            <p>
+                Cada carta representa un regalo que recibirás en la fecha indicada. Cuando llegue la fecha,
+                la carta se desbloqueará y podrás descubrir qué regalo especial te espera.
+            </p>
             <p><strong>Fecha de ingreso:</strong> <span id="current-date"></span></p>
         </section>
     </main>
 
     <footer>
-        <p>Howard Institute • Departamento de Sorpresas y Magia Especial</p>
+        <p>Hogwarts Academy • Departamento de Sorpresas y Magia Especial</p>
         <p>© 2026 - Todos los derechos reservados</p>
     </footer>
 
@@ -186,12 +192,10 @@
             <span class="close-modal">&times;</span>
             <div class="modal-header">
                 <h2 id="modal-title">Carta de Aceptación</h2>
-                <p id="modal-subtitle">Howarts Institute</p>
+                <p id="modal-subtitle">Hogwarts Academy</p>
             </div>
             <div class="modal-body">
-                <div id="modal-letter-content">
-                    <!-- El contenido de la carta se cargará aquí -->
-                </div>
+                <div id="modal-letter-content"></div>
             </div>
         </div>
     </div>
