--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="letter-card" id="letter1">
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
-                        <h3>Carta #1</h3>
+                        <h3>COMUNICADO #1 </h3>
                         <p class="letter-date">Disponible: 14 de Febrero, 2026</p>
                         <p class="letter-status" id="status1">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown1"></div>
@@ -118,7 +118,7 @@
                 <div class="letter-card" id="letter2">
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
-                        <h3>Carta #2</h3>
+                        <h3>COMUNICADO #2 </h3>
                         <p class="letter-date">Disponible: 14 de Marzo, 2026</p>
                         <p class="letter-status" id="status2">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown2"></div>
@@ -132,7 +132,7 @@
                 <div class="letter-card" id="letter3">
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
-                        <h3>Carta #3</h3>
+                        <h3>COMUNICADO #3</h3>
                         <p class="letter-date">Disponible: 14 de Abril, 2026</p>
                         <p class="letter-status" id="status3">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown3"></div>
@@ -146,7 +146,7 @@
                 <div class="letter-card" id="letter4">
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
-                        <h3>Carta #4</h3>
+                        <h3>COMUNICADO #4</h3>
                         <p class="letter-date">Disponible: 14 de Mayo, 2026</p>
                         <p class="letter-status" id="status4">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown4"></div>
@@ -159,7 +159,7 @@
                 <div class="letter-card birthday" id="letter5">
                     <div class="letter-seal sealed"><i class="fas fa-gift"></i></div>
                     <div class="letter-content">
-                        <h3>Carta Especial 🎂</h3>
+                        <h3>COMUNICADO ESPECIAL 🎂</h3>
                         <p class="letter-date">Disponible: 19 de Mayo, 2026</p>
                         <p class="letter-status" id="status5">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown5"></div>
