Actualización album magico

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hogwarts - Academy of Magic and Science</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,8 +29,8 @@
 
     <header class="main-header">
         <div class="logo-container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Hogwarts-Crest.png"
-                alt="Escudo Hogwarts" class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Hogwarts-Crest.png" alt="Escudo Hogwarts"
+                class="logo">
             <h1>HOGWARTS</h1>
             <h2>Academy of Magic and Science</h2>
         </div>
@@ -105,7 +106,7 @@
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
                         <h3>COMUNICADO #1 </h3>
-                        <p class="letter-date">Disponible: 14 de Febrero, 2026</p>
+                        <p class="letter-date">Disponible: Fecha Mágica - Febrero </p>
                         <p class="letter-status" id="status1">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown1"></div>
                         <p class="letter-description">
@@ -119,7 +120,7 @@
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
                         <h3>COMUNICADO #2 </h3>
-                        <p class="letter-date">Disponible: 14 de Marzo, 2026</p>
+                        <p class="letter-date">Disponible: Fecha Mágica - Marzo</p>
                         <p class="letter-status" id="status2">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown2"></div>
                         <p class="letter-description">
@@ -133,7 +134,7 @@
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
                         <h3>COMUNICADO #3</h3>
-                        <p class="letter-date">Disponible: 14 de Abril, 2026</p>
+                        <p class="letter-date">Disponible: Fecha Mágica - Abril </p>
                         <p class="letter-status" id="status3">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown3"></div>
                         <p class="letter-description">
@@ -147,7 +148,7 @@
                     <div class="letter-seal sealed"><i class="fas fa-lock"></i></div>
                     <div class="letter-content">
                         <h3>COMUNICADO #4</h3>
-                        <p class="letter-date">Disponible: 14 de Mayo, 2026</p>
+                        <p class="letter-date">Disponible: Fecha Mágica - Mayo</p>
                         <p class="letter-status" id="status4">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown4"></div>
                         <p class="letter-description">
@@ -160,7 +161,7 @@
                     <div class="letter-seal sealed"><i class="fas fa-gift"></i></div>
                     <div class="letter-content">
                         <h3>COMUNICADO ESPECIAL 🎂</h3>
-                        <p class="letter-date">Disponible: 19 de Mayo, 2026</p>
+                        <p class="letter-date">Disponible: Fecha Mágica - Mayo</p>
                         <p class="letter-status" id="status5">BLOQUEADA</p>
                         <div class="countdown-small" id="countdown5"></div>
                         <p class="letter-description">
@@ -172,6 +173,176 @@
             </div>
         </section>
 
+        ----------------------------------------------------
+
+        <!-- ===================== -->
+        <!-- ÁLBUM DE RECUERDOS -->
+        <!-- ===================== -->
+        <section class="album-section">
+            <div class="section-title">
+                <h2>Álbum de Recuerdos</h2>
+                <p>Momentos que forman parte de tu historia magíca con una personita especial</p>
+            </div>
+
+            <div class="album-container">
+
+                <!-- FOTO 1 -->
+                <div class="album-card">
+                    <img src="img/R1.jpg" alt="Recuerdo 1">
+                    <div class="album-info">
+                        <h3>Recuerdo 1</h3>
+                        <p>Primera Cita Museo🖼️ - Acuario🪼 - Restaurante🍷.</p>
+                        <span>14 de Agosto 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 2 -->
+                <div class="album-card">
+                    <img src="img/R2.jpg" alt="Recuerdo 2">
+                    <div class="album-info">
+                        <h3>Recuerdo 2</h3>
+                        <p>Primera Cita Lago Ciudad Universitaria BUAP🌳 .</p>
+                        <span>19 de Agosto 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 3 -->
+                <div class="album-card">
+                    <img src="img/R3.jpg" alt="Recuerdo 3">
+                    <div class="album-info">
+                        <h3>Recuerdo 3</h3>
+                        <p>Concierto En CU🏟️.</p>
+                        <span>21 de Agosto 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 4 -->
+                <div class="album-card">
+                    <img src="img/R4.jpg" alt="Recuerdo 4">
+                    <div class="album-info">
+                        <h3>Recuerdo 4</h3>
+                        <p>Laguna de San Baltazar.🌿</p>
+                        <span>27 de Agosto 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 5 -->
+                <div class="album-card">
+                    <img src="img/R5.jpg" alt="Recuerdo 5">
+                    <div class="album-info">
+                        <h3>Recuerdo 5</h3>
+                        <p>Picnic Flor del Bosque🧺 - Llegada de Luna🧸</p>
+                        <span>6 de Septiembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 6 -->
+                <div class="album-card">
+                    <img src="img/R6.jpg" alt="Recuerdo 6">
+                    <div class="album-info">
+                        <h3>Recuerdo 6</h3>
+                        <p>Planetario Los Fuertes🪐 </p>
+                        <span>20 de Septiembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 7 -->
+                <div class="album-card">
+                    <img src="img/R7.jpg" alt="Recuerdo 7">
+                    <div class="album-info">
+                        <h3>Recuerdo 7</h3>
+                        <p>Fortaleza de San Carlos Perote 🏰</p>
+                        <span>27 de Septiembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 8 -->
+                <div class="album-card">
+                    <img src="img/R8.jpg" alt="Recuerdo 8">
+                    <div class="album-info">
+                        <h3>Recuerdo 8</h3>
+                        <p>Regalo Especial 🎀 </p>
+                        <span>9 Octubre 2025</span>
+                    </div>
+                </div>
+                <!-- FOTO 9 -->
+                <div class="album-card">
+                    <img src="img/R9.jpg" alt="Recuerdo 9">
+                    <div class="album-info">
+                        <h3>Recuerdo 9</h3>
+                        <p>Día de Muertos - Atlixco🌻 </p>
+                        <span>12 Octubre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 10 -->
+                <div class="album-card">
+                    <img src="img/R10.jpg" alt="Recuerdo 10">
+                    <div class="album-info">
+                        <h3>Recuerdo 10</h3>
+                        <p>Un Lobo Domesticado 🐺</p>
+                        <span>23 Octubre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 11 -->
+                <div class="album-card">
+                    <img src="img/R11.jpg" alt="Recuerdo 11">
+                    <div class="album-info">
+                        <h3>Recuerdo 11</h3>
+                        <p>Ramo de Gerberas💐</p>
+                        <span>30 Octubre 2025</span>
+                    </div>
+                </div>
+                <!-- FOTO 12 -->
+                <div class="album-card">
+                    <img src="img/R12.jpg" alt="Recuerdo 12">
+                    <div class="album-info">
+                        <h3>Recuerdo 12</h3>
+                        <p>Bolo Fest 🎄</p>
+                        <span>28 Noviembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 13 -->
+                <div class="album-card">
+                    <img src="img/R13.jpg" alt="Recuerdo 13">
+                    <div class="album-info">
+                        <h3>Recuerdo 13</h3>
+                        <p>Casa de Gengibre 🏠</p>
+                        <span>4 Diciembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 14 -->
+                <div class="album-card">
+                    <img src="img/R14.jpg" alt="Recuerdo 14">
+                    <div class="album-info">
+                        <h3>Recuerdo 14</h3>
+                        <p>Callejón Mágico - Restaurante Harry Potter🍷🪄</p>
+                        <span>13 Diciembre 2025</span>
+                    </div>
+                </div>
+
+                <!-- FOTO 15 -->
+                <div class="album-card">
+                    <img src="img/R15.jpg" alt="Recuerdo 14">
+                    <div class="album-info">
+                        <h3>Recuerdo 14</h3>
+                        <p>Boda con Ximenita💒🩷 </p>
+                        <span>13 Diciembre 2025</span>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </section>
+
+
+
+        -----------------------------------------------------
+
         <section class="instructions">
             <h3>Instrucciones</h3>
             <p>
@@ -180,6 +351,10 @@
             </p>
             <p><strong>Fecha de ingreso:</strong> <span id="current-date"></span></p>
         </section>
+
+
+
+
     </main>
 
     <footer>
