--- a/index.html
+++ b/index.html
@@ -173,11 +173,42 @@
             </div>
         </section>
 
-        ----------------------------------------------------
+        <!-------------------------------------------------------------------------------------------------------------------->
+        <!-- ===================== -->
+        <section class="en_proceso_trabajo">
+            <div class="section-title">
+                <h2>Seguimos Trabajando...</h2>
+                <p>La magia se está preparando. Muy pronto habrá novedades.</p>
+            </div>
+
+            <div class="work-timer">
+                <div class="time-box">
+                    <span id="wt-days">00</span>
+                    <small>DÍAS</small>
+                </div>
+                <div class="time-box">
+                    <span id="wt-hours">00</span>
+                    <small>HORAS</small>
+                </div>
+                <div class="time-box">
+                    <span id="wt-minutes">00</span>
+                    <small>MIN</small>
+                </div>
+                <div class="time-box">
+                    <span id="wt-seconds">00</span>
+                    <small>SEG</small>
+                </div>
+            </div>
+        </section>
+
+        <!-------------------------------------------------------------------------------------------------------------------->
+
 
         <!-- ===================== -->
         <!-- ÁLBUM DE RECUERDOS -->
         <!-- ===================== -->
+        <!--
+       
         <section class="album-section">
             <div class="section-title">
                 <h2>Álbum de Recuerdos</h2>
@@ -186,7 +217,6 @@
 
             <div class="album-container">
 
-                <!-- FOTO 1 -->
                 <div class="album-card">
                     <img src="img/R1.jpg" alt="Recuerdo 1">
                     <div class="album-info">
@@ -196,7 +226,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 2 -->
+
                 <div class="album-card">
                     <img src="img/R2.jpg" alt="Recuerdo 2">
                     <div class="album-info">
@@ -206,7 +236,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 3 -->
+
                 <div class="album-card">
                     <img src="img/R3.jpg" alt="Recuerdo 3">
                     <div class="album-info">
@@ -216,7 +246,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 4 -->
+
                 <div class="album-card">
                     <img src="img/R4.jpg" alt="Recuerdo 4">
                     <div class="album-info">
@@ -226,7 +256,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 5 -->
+
                 <div class="album-card">
                     <img src="img/R5.jpg" alt="Recuerdo 5">
                     <div class="album-info">
@@ -236,7 +266,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 6 -->
+
                 <div class="album-card">
                     <img src="img/R6.jpg" alt="Recuerdo 6">
                     <div class="album-info">
@@ -246,7 +276,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 7 -->
+
                 <div class="album-card">
                     <img src="img/R7.jpg" alt="Recuerdo 7">
                     <div class="album-info">
@@ -256,7 +286,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 8 -->
+
                 <div class="album-card">
                     <img src="img/R8.jpg" alt="Recuerdo 8">
                     <div class="album-info">
@@ -265,7 +295,8 @@
                         <span>9 Octubre 2025</span>
                     </div>
                 </div>
-                <!-- FOTO 9 -->
+
+
                 <div class="album-card">
                     <img src="img/R9.jpg" alt="Recuerdo 9">
                     <div class="album-info">
@@ -275,7 +306,8 @@
                     </div>
                 </div>
 
-                <!-- FOTO 10 -->
+
+
                 <div class="album-card">
                     <img src="img/R10.jpg" alt="Recuerdo 10">
                     <div class="album-info">
@@ -285,7 +317,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 11 -->
+
                 <div class="album-card">
                     <img src="img/R11.jpg" alt="Recuerdo 11">
                     <div class="album-info">
@@ -294,7 +326,8 @@
                         <span>30 Octubre 2025</span>
                     </div>
                 </div>
-                <!-- FOTO 12 -->
+
+
                 <div class="album-card">
                     <img src="img/R12.jpg" alt="Recuerdo 12">
                     <div class="album-info">
@@ -304,7 +337,8 @@
                     </div>
                 </div>
 
-                <!-- FOTO 13 -->
+
+
                 <div class="album-card">
                     <img src="img/R13.jpg" alt="Recuerdo 13">
                     <div class="album-info">
@@ -314,7 +348,8 @@
                     </div>
                 </div>
 
-                <!-- FOTO 14 -->
+
+
                 <div class="album-card">
                     <img src="img/R14.jpg" alt="Recuerdo 14">
                     <div class="album-info">
@@ -324,7 +359,7 @@
                     </div>
                 </div>
 
-                <!-- FOTO 15 -->
+
                 <div class="album-card">
                     <img src="img/R15.jpg" alt="Recuerdo 14">
                     <div class="album-info">
@@ -338,10 +373,11 @@
 
             </div>
         </section>
+        
+        -->
 
 
-
-        -----------------------------------------------------
+        ----------------------------------------------------
 
         <section class="instructions">
             <h3>Instrucciones</h3>
