--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                     <p>Te esperamos con honor y orgullo.</p>
                 </div>
             </div>
+
+
         </section>
 
         <section class="letters-section">
@@ -176,6 +178,7 @@
         <!-------------------------------------------------------------------------------------------------------------------->
         <!-- ===================== -->
         <section class="en_proceso_trabajo">
+
             <div class="section-title">
                 <h2>Seguimos Trabajando...</h2>
                 <p>La magia se está preparando. Muy pronto habrá novedades.</p>
@@ -199,9 +202,30 @@
                     <small>SEG</small>
                 </div>
             </div>
+
+            <!-- 🚂 TREN REALISTA -->
+            <div class="real-train-wrapper">
+                <div class="real-train">
+                    <img src="img/LOCOMOTORA/vagon.png" class="wagon-img" alt="Vagón">
+                    <img src="img/LOCOMOTORA/vagon.png" class="wagon-img" alt="Vagón">
+                    <img src="img/LOCOMOTORA/vagon.png" class="wagon-img" alt="Vagón">
+                    <img src="img/LOCOMOTORA/vagon.png" class="wagon-img" alt="Vagón">
+                    <img src="img/LOCOMOTORA/vagon.png" class="wagon-img" alt="Vagón">
+                    <img src="img/LOCOMOTORA/locomotora.png" class="locomotive-img" alt="Locomotora mágica">
+
+                </div>
+
+                <!-- ✨ CHISPAS -->
+                <span class="magic-spark"></span>
+                <span class="magic-spark"></span>
+                <span class="magic-spark"></span>
+                <span class="magic-spark"></span>
+            </div>
+
         </section>
 
         <!-------------------------------------------------------------------------------------------------------------------->
+
 
 
         <!-- ===================== -->
@@ -411,7 +435,13 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+
+    <audio id="bg-music" loop>
+        <source src="https://TULINKAUDIO.com/harry_potter_theme.mp3" type="audio/mpeg">
+    </audio>
+
+
+
 </body>
 
 </html>
