Actualiza seccion tren y musica de fondo

--- a/index.html
+++ b/index.html
@@ -437,8 +437,9 @@
 
 
     <audio id="bg-music" loop>
-        <source src="https://TULINKAUDIO.com/harry_potter_theme.mp3" type="audio/mpeg">
-    </audio>
+    <source src="audio/harrypotter.mp3" type="audio/mpeg">
+</audio>
+
 
 
 
