Cambio en el HTML

--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
     </div>
 
 
-    <audio id="bg-music" loop>
+ <!--   <audio id="bg-music" loop>
         <source src="audio/harrypotter.mp3" type="audio/mpeg">
-    </audio>
+    </audio>-->
 
 
 
