--- a/index.html
+++ b/index.html
@@ -436,12 +436,18 @@
     </div>
 
 
- <!--   <audio id="bg-music" loop>
+    <audio id="bg-music" loop autoplay>
         <source src="audio/harrypotter.mp3" type="audio/mpeg">
-    </audio>-->
+    </audio>
+    <div id="audio-controls">
+        <button id="play-pause-btn"><i class="fas fa-play"></i> Reproducir Música</button>
+    </div>
 
 
 
+
+
+    <script src="script.js"></script>
 
 </body>
 
