--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
         <section class="instructions">
             <h3>Instrucciones</h3>
             <p>
-                Cada carta representa un regalo que recibirás en la fecha indicada. Cuando llegue la fecha,
-                la carta se desbloqueará y podrás descubrir qué regalo especial te espera.
+                Cada carta representa un regalo que recibirás en la fecha indicada.
             </p>
             <p><strong>Fecha de ingreso:</strong> <span id="current-date"></span></p>
         </section>
