--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
 
         </section>
 
+        <!-- Aquí conectas la magia del JavaScript -->
+        <script src="owl.js"></script>
+
+
 
         <!-------------------------------------------------------------------------------------------------------------------->
 
