--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </section>
 
         <!-- Aquí conectas la magia del JavaScript -->
-        <script src="lechuza.js"></script>
+        <script src="lechuza2.js"></script>
 
 
 
