--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         </section>
 
-        <!-- Aquí conectas la magia del JavaScript -->
+        <!-- Aquí conectas la magia del JavaScrgiipt -->
         <script src="lechuza2.js"></script>
 
 
@@ -222,7 +222,6 @@
         <!-- ===================== -->
         <!-- ÁLBUM DE RECUERDOS -->
         <!-- ===================== -->
-        <!---
         <section class="album-section">
             <div class="section-title">
                 <h2>Álbum de Recuerdos</h2>
@@ -388,7 +387,6 @@
             </div>
         </section>
 
-        -->
         <!-------------------------------------------------------------------------------------------------------------------->
         <!-- ===================== -->
         <section class="en_proceso_trabajo">
